--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -2,5 +2,7 @@
 
   <%= simple_form_for @gram do |f| %>
     <%= f.input :message %>
+    <%= f.input :picture %>
+    <br  />
     <%= f.submit "Post" %>
   <% end %>
