--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,8 +1,12 @@
-<h1> Add a New Gram </h1>
 
-  <%= simple_form_for @gram do |f| %>
-    <%= f.input :message %>
-    <%= f.input :picture %>
-    <br  />
-    <%= f.submit "Post" %>
-  <% end %>
+<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
+
+  <h1> Add a New Gram </h1>
+
+    <%= simple_form_for @gram do |f| %>
+      <%= f.input :message %>
+      <%= f.input :picture %>
+      <br  />
+      <%= f.submit "Post", class: 'my-btn' %>
+    <% end %>
+</div>
